--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react.amiga-guru-meditation",
+  "name": "react-amiga-guru-meditation",
   "version": "1.0.0",
   "description": "React JS Class to display a Amiga Guru Meditation Tribute",
   "main": "guru-meditation.js",
