--- a/package.json
+++ b/package.json
@@ -1,26 +1,65 @@
 {
-  "name": "react-amiga-guru-meditation",
-  "version": "1.0.0",
-  "description": "React JS Class to display a Amiga Guru Meditation Tribute",
-  "main": "js/react-amiga-guru-meditation.js",
-  "scripts": {
-    "test": "none"
-  },
+  "name": "react-toggle-component",
+  "version": "2.0.",
+  "private": false,
+  "description": "A React Error Boundary styled like the Amiga Guru Meditation",
+  "main": "dist/index.js",
+  "keywords": [
+    "amiga",
+    "error",
+    "boundary",
+    "component",
+    "react",
+    "react-component",
+    "docz",
+    "typescript",
+    "hooks"
+  ],
+  "homepage": "http://gfazioli.github.io/react-amiga-guru-meditation/",
   "repository": {
     "type": "git",
     "url": "https://github.com/gfazioli/react-amiga-guru-meditation"
   },
-  "keywords": [
-    "React",
-    "Amiga",
-    "Guru",
-    "Meditation",
-    "Javascript"
-  ],
-  "author": "gfazioli",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/gfazioli/react-amiga-guru-meditation/issues"
   },
-  "homepage": "https://github.com/gfazioli/react-amiga-guru-meditation"
+  "author": "Giovambattista Fazioli",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@emotion/cache": "^10.0.0",
+    "@emotion/core": "^10.0.6",
+    "@emotion/styled-base": "^10.0.5",
+    "@types/node": "11.10.5",
+    "@types/react": "16.8.7",
+    "@types/react-dom": "16.8.2",
+    "@types/styled-components": "^4.1.12",
+    "@types/webpack": "4.4.25",
+    "babel-loader": "^8.0.4",
+    "docz": "^0.13.7",
+    "docz-theme-default": "^0.13.7",
+    "husky": "^1.3.1",
+    "prettier": "1.16.4",
+    "ts-loader": "^5.3.0",
+    "ts-node": "^8.0.3",
+    "tslint": "^5.13.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.3.1",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3"
+  },
+  "dependencies": {
+    "react": "^16.8.4",
+    "react-circle": "^1.1.1",
+    "react-dom": "^16.8.4",
+    "styled-components": "^4.1.3"
+  },
+  "scripts": {
+    "postinstall": "tsc -p tsconfig.json",
+    "dev": "docz dev",
+    "precommit": "tsc --noEmit --project ./config/tsconfig.json && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
+    "build" : "yarn postinstall && docz build"
+  }
 }
