--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-toggle-component",
-  "version": "2.0.",
+  "name": "react-amiga-guru-meditation",
+  "version": "2.0.0",
   "private": false,
   "description": "A React Error Boundary styled like the Amiga Guru Meditation",
   "main": "dist/index.js",
