--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-amiga-guru-meditation",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "private": false,
   "description": "A React Error Boundary styled like the Amiga Guru Meditation",
   "main": "dist/index.js",
@@ -27,11 +27,11 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.3.3",
-    "@emotion/cache": "^10.0.0",
-    "@emotion/core": "^10.0.6",
-    "@emotion/styled-base": "^10.0.5",
-    "@types/node": "11.10.5",
-    "@types/react": "16.8.7",
+    "@emotion/cache": "^10.0.9",
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled-base": "^10.0.9",
+    "@types/node": "11.11.3",
+    "@types/react": "16.8.8",
     "@types/react-dom": "16.8.2",
     "@types/styled-components": "^4.1.12",
     "@types/webpack": "4.4.25",
@@ -42,7 +42,7 @@
     "prettier": "1.16.4",
     "ts-loader": "^5.3.0",
     "ts-node": "^8.0.3",
-    "tslint": "^5.13.1",
+    "tslint": "^5.14.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.3.1",
     "webpack": "^4.29.5",
@@ -63,7 +63,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsc --noEmit --project ./config/tsconfig.json && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'"
+      "pre-commit": "tsc --project tsconfig.json && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'"
     }
   }
 }
