--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-amiga-guru-meditation",
-  "version": "2.0.13",
+  "version": "3.0.0",
   "private": false,
   "description": "A React Error Boundary styled like the Amiga Guru Meditation",
   "main": "dist/index.js",
@@ -26,43 +26,43 @@
   "author": "Giovambattista Fazioli",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@emotion/cache": "^10.0.9",
-    "@emotion/core": "^10.0.10",
-    "@emotion/styled-base": "^10.0.10",
-    "@types/node": "12.0.0",
-    "@types/webpack": "4.4.31",
+    "@babel/core": "^7.4.3",
+    "@types/node": "12.12.7",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
+    "@types/styled-components": "^4.1.19",
+    "@types/webpack": "4.39.8",
     "babel-loader": "^8.0.4",
-    "docz": "^0.13.7",
-    "docz-theme-default": "^0.13.7",
-    "husky": "^2.2.0",
-    "prettier": "1.17.0",
-    "ts-loader": "^6.0.0",
+    "prettier": "1.19.1",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.0.3",
-    "tslint": "^5.14.0",
+    "tslint": "^6.0.0-beta0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.3.1",
+    "typescript": "3.7.2",
+    "typescript-styled-plugin": "^0.15.0",
     "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3"
-  },
-  "dependencies": {
-    "@types/react": "16.8.17",
-    "@types/react-dom": "16.8.4",
-    "@types/styled-components": "^4.1.14",
+    "webpack-cli": "^3.3.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.2.0"
+    "docz": "^v2.0.0-rc.71",
+    "@emotion/core": "^10.0.14",
+    "@emotion/styled": "^10.0.14",
+    "gatsby": "^2.17.8",
+    "gatsby-theme-docz": "^2.0.0-rc.71",
+    "scheduler": "^0.17.0",
+    "styled-components": "*"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "styled-components": "*"
+  },
+  "dependencies": {
+    "react-use": "^13.2.1"
   },
   "scripts": {
-    "postinstall": "tsc -p tsconfig.json",
     "dev": "docz dev",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build --base /react-amiga-guru-meditation",
-    "build": "yarn postinstall && yarn docz:build"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsc --project tsconfig.json && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'"
-    }
+    "build": "docz build",
+    "production": "tsc --project tsconfig.json && git add dist && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'"
   }
 }
