--- a/package.json
+++ b/package.json
@@ -26,43 +26,62 @@
   "author": "Giovambattista Fazioli",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@types/node": "12.12.7",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/styled-components": "^4.1.19",
-    "@types/webpack": "4.39.8",
-    "babel-loader": "^8.0.4",
-    "prettier": "1.19.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.0.3",
-    "tslint": "^6.0.0-beta0",
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
+    "@types/enzyme": "^3.10.8",
+    "@types/node": "14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
+    "@types/webpack": "4.41.21",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
+    "docz": "^2.3.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.6.1",
+    "gatsby": "^2.23.22",
+    "gatsby-plugin-polyfill-io": "^1.1.0",
+    "gatsby-theme-docz": "^2.3.1",
+    "prettier": "2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "scheduler": "^0.19.1",
+    "styled-components": "^5.2.1",
+    "ts-loader": "^7.0.5",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "3.7.2",
+    "typescript": "4.2.4",
     "typescript-styled-plugin": "^0.15.0",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.3.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "docz": "^v2.0.0-rc.71",
-    "@emotion/core": "^10.0.14",
-    "@emotion/styled": "^10.0.14",
-    "gatsby": "^2.17.8",
-    "gatsby-theme-docz": "^2.0.0-rc.71",
-    "scheduler": "^0.17.0",
-    "styled-components": "*"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "peerDependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "styled-components": "*"
+    "styled-components": "^5.0.1"
   },
   "dependencies": {
-    "react-use": "^13.2.1"
+    "react-use": "^17.2.1"
   },
   "scripts": {
     "dev": "docz dev",
     "build": "docz build",
-    "production": "tsc --project tsconfig.json && git add dist && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'"
+    "production": "tsc --project tsconfig.json && git add dist && ./node_modules/tslint/bin/tslint './src/**/*.ts{,x}'",
+    "testing-prerelease": "yarn version --prerelease --preid=beta",
+    "testing-prepatch": "yarn version --prepatch --preid=beta",
+    "testing-preminor": "yarn version --preminor --preid=beta",
+    "testing-premajor": "yarn version --premajor --preid=beta",
+    "staging-prerelease": "yarn version --prerelease --preid=rc",
+    "staging-prepatch": "yarn version --prepatch --preid=rc",
+    "staging-preminor": "yarn version --preminor --preid=rc",
+    "staging-premajor": "yarn version --premajor --preid=rc",
+    "production-patch": "yarn version --patch",
+    "production-minor": "yarn version --minor",
+    "production-major": "yarn version --major",
+    "production-version": "yarn version"
   }
 }
